# edgetx-hazel

./: README-BUILD.md  build.sh  fw.json
companion/src/: CMakeLists.txt
companion/src/firmwares/: boards.cpp  boards.h
companion/src/firmwares/opentx/: opentxinterface.cpp
radio/src/: CMakeLists.txt  stamp.cpp
radio/src/boards/generic_stm32/: bl_keys.cpp
radio/src/targets/hazel/: CMakeLists.txt  board.cpp  board.h  hal.h  lcd_driver_spi.cpp  usb_descriptor.h
radio/src/targets/taranis/: CMakeLists.txt  board.cpp  hal.h  usb_descriptor.h
radio/util/: build-firmware.py  fwoptions.py
radio/util/hw_defs/: hal_keys.py  legacy_names.py  pot_config.py  switch_config.py
tools/: build-common.sh  build-companion.sh  build-gn.py  build-hazel.py  generate-hw-defs.sh  generate-yaml.sh  msys2_fetch_and_build_all.sh
